--- a/package.json
+++ b/package.json
@@ -2,13 +2,27 @@
   "name": "alpaca-api-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:6660",
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
+    "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.0",
+    "@types/node": "^16.18.80",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "antd": "^5.14.0",
+    "axios": "^1.6.7",
+    "http-proxy-middleware": "^2.0.6",
+    "monaco-editor": "^0.52.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-monaco-editor": "^0.56.2",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
